Bug 126243 - FILESAVE DOCX Change tracked style change cannot be rejected after RT
Summary: FILESAVE DOCX Change tracked style change cannot be rejected after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on: 149747
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-07-05 11:21 UTC by NISZ LibreOffice Team
Modified: 2022-07-08 10:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (20.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-07-05 11:22 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (18.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-07-05 11:22 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Word (47.62 KB, image/png)
2019-07-05 11:23 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Word after rejecting the changes (40.69 KB, image/png)
2019-07-05 11:23 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and the roundtripped document in Word and Writer (98.71 KB, image/png)
2019-07-29 15:01 UTC, Gabor Kelemen (Collabora)
Details
The original file saved by current 6.4 master (13.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-07-29 15:01 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-07-05 11:21:17 UTC
Description:
Attached example file was made in Word and contains change tracking entries about paragraph style changes. These can be rejected in Word and the original paragraph style is restored. After saving the file in Writer this is not possible: Normal style is restored after rejecting the changes in Word.

Steps to Reproduce:
1.	Create a simple document in Word with two paragraphs and format the second with Heading 2 
2.	Turn on change tracking and modify the style to Heading 3
3.	Save the file, open it in Writer, save it with a different name
4.	Open the original and the roundtripped file in Word
5.	Reject both changes


Actual Results:
In the roundtripped file the second paragraphs style becomes Normal instead of the original Heading 2

Expected Results:
The style change can be reverted in the roundtripped file in Word.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 81ab6abe574a75f1ed229a88ceee9eb3b143a18a
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-07-02_02:29:05
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-07-05 11:22:11 UTC
Created attachment 152577 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-07-05 11:22:40 UTC
Created attachment 152578 [details]
The original file saved by Writer
Comment 3 NISZ LibreOffice Team 2019-07-05 11:23:03 UTC
Created attachment 152579 [details]
Screenshot of the original and exported document side by side in Word
Comment 4 NISZ LibreOffice Team 2019-07-05 11:23:21 UTC
Created attachment 152580 [details]
Screenshot of the original and exported document side by side in Word after rejecting the changes
Comment 5 Commit Notification 2019-07-09 14:55:28 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4248d759744f83a68d334a8b347124719a2886a8%5E%21

tdf#126243 DOCX: export/reject tracked paragraph style change

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2019-07-29 15:01:10 UTC
Created attachment 153039 [details]
Screenshot of the original and the roundtripped document in Word and Writer

In current version:

Version: 6.4.0.0.alpha0+ (x86)
Build ID: 382aceb80d3c0f420d51762e1f88eee2334ff11b
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-07-21_23:45:18
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Writer can retain the original paragraph style after rejecting the changes in the roundtripped file, but Word still loses it.
Comment 7 Gabor Kelemen (Collabora) 2019-07-29 15:01:45 UTC
Created attachment 153040 [details]
The original file saved by current 6.4 master
Comment 8 Gabor Kelemen (Collabora) 2019-07-29 15:02:48 UTC
Let me reopen this. In the original request we meant interop with Word :)
Comment 9 Commit Notification 2019-08-02 06:51:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7f38fabe3f723c85482c91ce6586e38081ee013f%5E%21

tdf#126243 DOCX change tracking: pStyle needs simplified style id

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 László Németh 2019-08-02 10:06:39 UTC
@Szabolcs, Gábor: thanks for the verification!