tdf#126243 DOCX: export/reject tracked paragraph style change

Fix loss of rejection data (w:pStyle in w:pPrChange) during
DOCX export, also fix missing rejection of tracked paragraph
style changes during editing.

Change-Id: I8e6dc4e6d14e3237ff82d370f55031dcc12418c0
Reviewed-on: https://gerrit.libreoffice.org/75303
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>